spacing fixes

--- a/components/about1.module.css
+++ b/components/about1.module.css
@@ -116,6 +116,14 @@
   color: var(--color-gray-100);
   font-family: var(--h2-48);
 }
+@media screen and (max-width: 1280px) {
+  .imgIcon {
+    height: 500px;
+  }
+  .mediumLengthHero {
+    font-size: 34px;
+  }
+}
 @media screen and (max-width: 1050px) {
   .mediumLengthHero {
     font-size: var(--font-size-19xl);
